# cookiecutter-templates

./: cookiecutter.json  gen.py  justfile
arduino/{{cookiecutter.project_slug}}/: .gitignore  justfile  shell.nix
arduino/{{cookiecutter.project_slug}}/main/: main.ino
bun/{{cookiecutter.project_slug}}/: shell.nix
c/: cookiecutter.json
c-cpp/{{cookiecutter.project_slug}}/: shell.nix
c/{{cookiecutter.project_slug}}/: CMakeLists.txt  justfile  shell.nix
c/{{cookiecutter.project_slug}}/nix/: nivv  sources.nix
c/{{cookiecutter.project_slug}}/src/: hello.c  main.c
c/{{cookiecutter.project_slug}}/tests/: CMakeLists.txt
cpp/{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt  shell.nix
cpp/{{cookiecutter.project_slug}}/include/: hello.h
empty/{{cookiecutter.project_slug}}/: shell.nix
esp-idf/{{cookiecutter.project_slug}}/: justfile  shell.nix
esp-rust/{{cookiecutter.project_slug}}/: Cargo.toml  justfile  niv  rust-toolchain.toml  shell.nix
go/{{cookiecutter.project_slug}}/: shell.nix
java-maven/{{cookiecutter.project_slug}}/: justfile  shell.nix
node/{{cookiecutter.project_slug}}/: shell.nix
platformio/{{cookiecutter.project_slug}}/: .gitignore  justfile  platformio.ini  shell.nix
python/{{cookiecutter.project_slug}}/: shell.nix
rust/{{cookiecutter.project_slug}}/: shell.nix
templates/: base.txt  config.toml  nivv  sources.json  sources.nix
templates/niv/: config.toml  nivv  sources.json
test/{{cookiecutter.project_slug}}/: file.txt
zephyr/{{cookiecutter.project_slug}}/: .gitignore  shell.nix
(+5 files in other folders)
